--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         </div>
     </nav>
     <div id="root"></div>
-    <script type="text/babel" src="src.js"></script>
+    <script type="text/babel" src="src.js?12"></script>
   </body>
 </html>
